--- a/.github/workflows/build-mac-os.yml
+++ b/.github/workflows/build-mac-os.yml
@@ -34,4 +34,4 @@ jobs:
           go-version: 1.13.x
 
       - name: Run a Go build
-        run: go build -o bin/main main.go
+        run: go build -o build/main main.go
