--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -23,7 +23,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: ["windows-2016", "windows-2019", "windows-2022", "windows-latest"]
+        os: ["windows-2019", "windows-2022", "windows-latest"]
     steps:
       - name: Checkout repository.
         uses: actions/checkout@v2
