--- a/.github/workflows/security-analysis-windows.yml
+++ b/.github/workflows/security-analysis-windows.yml
@@ -26,7 +26,7 @@ jobs:
       fail-fast: false
       matrix:
         language: ["go"]
-        os: ["windows-2016", "windows-2019"]
+        os: ["windows-2019"]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
