--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "ssl"]
 	path = ssl
-	url = https://github.com/mfdlabs-grid-development/mfdlabs-ssl.git
+	url = https://github.com/mfdlabs/ssl.git
